--- a/index.html
+++ b/index.html
@@ -34,8 +34,68 @@
              <!--  -->
             </div>
             <!--  -->
-            <div class="find-container"></div>
+            <div class="find-container">
+                <div class="finder">
+                      <!--  -->
+                    <input type="text" placeholder="Choose Area">
+                    <!--  -->
+                    <select name="" id="">
+                        <option value="">Property Type</option>
+                        <option value="">Residential</option>
+                        <option value="">Commercial</option>
+                        <option value="">industrial</option>
+                    </select>
+                    <!--  -->
+                    <select name="" id="">
+                        <option value="">Average Price</option>
+                        <option value="">5,000,000</option>
+                        <option value="">6,500,000</option>
+                        <option value="">5,500,000</option>
+                    </select>
+                    <button>Find Now</button>
+
+                </div>
+              <!--  -->
+            </div>
+            <!--  -->
+            </div>
+          
         </header>
+        <div class="middle-text">
+            <h2>featured properties</h2>
+        </div>
+        <p class="mt">For many of us, buying a home is a dream. And one that is not easily attainable. </p>
+        <span class="down-text">Promising to help them achive their dream.</span>
+        <!--  -->
+        <div class="rooms">
+            <!--  -->
+         <div class="down-pics">
+            <span>
+                <img src="ASSETS/st-room.jpg" alt="">
+                <H3>GMD 350,000/Month</H3>
+
+            </span>
+            <h4>Modern Villa</h4>
+         </div>
+         <!--  -->
+         <div class="down-pics">
+            <span>
+                <img src="ASSETS/Kitchen.jpg" alt="" >
+                <H3>GMD 250,000/Month</H3>
+            </span>
+            <h4>Advance Kitchen</h4>
+         </div>
+         <!--  -->
+         <div class="down-pics">
+            <span>
+                <img src="ASSETS/bedroom.jpg" alt="">
+                <H3>GMD 300,000/Month</H3>
+            </span>
+            <h4>Liberty Property</h4>
+         </div>
+         <!--  -->
+        </div>
+        <!--  -->
     </main>
     
 </body>
